# text-annotation

./: .gitignore  README.md  USAGE.md  data_import.py  demo.py  dev.md  main.py  models.py  plan.md  pyproject.toml  run_import.py  schemas.py  services.py  start_server.py
app/: main.py  models.py  schemas.py  services.py
docs/: api-quick-reference.md  api.md  frontend-development-guide.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
memo/: advanced_search_feature.md  api-docs-summary.md  batch-actions-ui-optimization-completed.md  batch-actions-ui-optimization.md  batch-annotation-implementation.md  batch-annotation-pagination.md  batch-label-selector-improvement.md  batch_labeling_update_202412.md  data-generation-optimization.md  data-import-optimization.md  data_import.md  dev.md  filter-panel-refactor.md  fix_test_issues_2024.md  frontend_annotation_implementation_notes.md  frontend_annotation_workflow_plan.md  highlight-feature-usage.md  keyboard-input-fix.md  keywords_search_feature.md  label-filter-enhancement.md  label-filter-tab-implementation.md  label-management-implementation.md  label-selection-fix.md  label-ui-optimization-2024.md  modern-form-style-guide.md  multi-label-fix-progress.md  multi-label-issues-analysis.md  optimization-notes.md  optimization_final_report.md  optimization_summary.md  page-header-component.md  pagination-component.md  plan.md  project-updates.md  results-list-optimization.md  static-frontend-setup.md  status_update.md
scripts/: README.md  __init__.py  data_import.py  label-desc.txt  migrate_db.py  run_import.py  test_performance.py  update_label_descriptions.py
server/: __init__.py  config.py  main.py  (+3 more)
(+81 files in other folders)
